commit prior mobile view

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             100% recommend! ”</p>
     </div>
 </main>
+<footer>
+    <p>Coded by <a href="https://github.com/cerezoar">Aldrin C.</a></p>
+</footer>
 
 <body>
 
